--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ p{background-color:#abcabc;}
 <div class="pink">
 
 <h2> Tara's h2  heading</h2>
+<a href="about.html">About us!</a>
 <p> a paragraph where Tara shares some knowledge with the world. Beware!</p>
 
 <ul>
