added allergies page

--- a/about.html
+++ b/about.html
@@ -19,8 +19,17 @@ p{background-color:#abcabc;}
 </head>
 <body>
 <h1 style="color:cyan;">Fab Cakes 4 You</h1>
-<div class="welcome">
 
+
+<div class="welcome">
+<p> links </p>
+<ul>
+
+<li><a href="index.html">home</a></li>
+<li><a href="about.html">About us</a></li>
+<li><a href="allergies.html">Allergies</a></li>
+
+</ul>
 
 <h2> welcome to are website 
 we loving baking espicaly for You :) </h2>
@@ -47,8 +56,8 @@ we loving baking espicaly for You :) </h2>
 <li>rice krispie bites</li>
 </ol>
 
-<h3> A h3 heading</h3>
-<a href="index.html">Home</a>
+<h3> </h3>
+<a href="index.html">bout us</a>
 
 <div class="pink">
 
@@ -56,13 +65,14 @@ we loving baking espicaly for You :) </h2>
 
 </div>
 
-<div class="green">
+<div class="aqua">
 
 
-
+  
 </div>
-<h4> See allergies down below </h4>
+<h4> See allergies in link  down below </h4>
 
 </body>
 </html>
 
+<a href="allergies.html"> allergies </a>
