--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@ p{background-color:#abcabc;}
 </head>
 <body>
 <h1>My website</h1>
+<p> links </p>
+<ul>
+
+<li><a href="index.html">home</a></li>
+<li><a href="about.html">About us</a></li>
+<li><a href="allergies.html">Allergies</a></li>
+
+</ul>
 <div class="pink">
 
 <h2> Tara's h2  heading</h2>
